--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <header class="inner-header">
-      <div class="container">
+      <div class="container clearfix">
         <nav class="inner-navigation">
+          <a href="index.html" class="inner-logo"><img src="img/item-logo.png" width="111" height="24" alt="Бородинский"></a>
           <ul>
-            <li><a href="index.html" class="inner-logo"><img src="img/item-logo.png" width="111" height="24" alt="Бородинский"></a></li>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="price.html">Прайс-лист</a></li>
@@ -25,49 +25,51 @@
       </div>
     </header>
 
-    <main class="">
+    <main>
+      <div class="container">
 
-      <!-- Хлебные крошки -->
+        <!-- Хлебные крошки -->
 
-      <div class="breadcrumbs">
-        <h1>набор для путешествий «Baxter of California»</h1>
-        <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="#">Магазин</a></li>
-          <li><a href="#">Средства для ухода</a></li>
-          <li><span>набор для путешествий «Baxter of California»</span></li>
-        </ul>
-      </div>
-
-      <!-- Блок выбранного товара -->
-
-      <div class="item-card">
-        <div class="item-gallery">
-          <img src="img/item-full.jpg" width="486" height="584" alt="Travel Kit">
-          <div class="item-gallery-preview">
-            <img src="img/item-prev-1.jpg" width="166" height="175" alt="Travel Kit">
-            <img src="img/item-prev-2.jpg" width="166" height="175" alt="Travel Kit">
-            <img src="img/item-prev-3.jpg" width="166" height="175" alt="Travel Kit">
-          </div>
-        </div>
-        <div class="item-details">
-          <b>Есть в наличии</b>
-          <span>Артикул: dexter-ae</span>
-          <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-        </div>
-        <div class="item-buy">
-          <span>2900 руб.</span>
-          <a href="#">Купить</a>
-        </div>
-        <div class="item-list">
-          <h2>В набор входят:</h2>
+        <div class="breadcrumbs">
+          <h1>набор для путешествий «Baxter of California»</h1>
           <ul>
-            <li>Средство для умывания (50 мл)</li>
-            <li>Увлажняющий крем (50 мл)</li>
-            <li>Крем для бритья (50 мл)</li>
-            <li>Крем после бритья, шампунь (50  мл)</li>
-            <li>Удобная кожаная косметичка</li>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Средства для ухода</a></li>
+            <li><span>набор для путешествий «Baxter of California»</span></li>
           </ul>
+        </div>
+
+        <!-- Блок выбранного товара -->
+
+        <div class="item-card clearfix">
+          <div class="item-gallery">
+            <img src="img/item-full.jpg" width="486" height="584" alt="Travel Kit">
+            <div class="item-gallery-preview">
+              <img src="img/item-prev-1.jpg" width="140" height="149" alt="Travel Kit">
+              <img src="img/item-prev-2.jpg" width="140" height="149" alt="Travel Kit">
+              <img src="img/item-prev-3.jpg" width="140" height="149" alt="Travel Kit">
+            </div>
+          </div>
+          <div class="item-details">
+            <b>Есть в наличии</b>
+            <span>Артикул: dexter-ae</span>
+            <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+            <div class="item-buy">
+              <span>2900 руб.</span>
+              <a href="#">Купить</a>
+            </div>
+            <div class="item-list">
+              <h2>В набор входят:</h2>
+              <ul>
+                <li>Средство для умывания (50 мл)</li>
+                <li>Увлажняющий крем (50 мл)</li>
+                <li>Крем для бритья (50 мл)</li>
+                <li>Крем после бритья, шампунь (50  мл)</li>
+                <li>Удобная кожаная косметичка</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </main>
