--- a/catalog.html
+++ b/catalog.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <header class="inner-header">
-      <div class="container">
+      <div class="container clearfix">
         <nav class="inner-navigation">
+          <a href="index.html" class="inner-logo"><img src="img/cat-logo.png" width="111" height="24" alt="Бородинский"></a>
           <ul>
-            <li><a href="index.html" class="inner-logo"><img src="img/cat-logo.png" width="111" height="24" alt="Бородинский"></a></li>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="price.html">Прайс-лист</a></li>
@@ -25,208 +25,211 @@
       </div>
     </header>
 
-    <!-- Хлебные крошки -->
+    <main>
+      <div class="container">
 
-    <main class="">
-      <div class="breadcrumbs">
-        <h1>Средства для ухода</h1>
-        <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="#">Магазин</a></li>
-          <li><span>Средства для ухода</span></li>
+        <!-- Хлебные крошки -->
+
+        <div class="breadcrumbs">
+          <h1>Средства для ухода</h1>
+          <ul>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><span>Средства для ухода</span></li>
+          </ul>
+        </div>
+
+        <!-- Фильтры -->
+
+        <form class="filters">
+          <fieldset class="filters-firms">
+            <legend>Производители:</legend>
+            <ul>
+              <li>
+                <label>
+                <input type="checkbox" name="baxter-of-california" checked>
+                Baxter of California
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="mr-natty">
+                  Mr Natty
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="suavecito" checked>
+                  Suavecito
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="malin-goetz">
+                  Malin+Goetz
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="murrays">
+                  Murray's
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="american-crew">
+                  American crew
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="filters-group">
+            <legend>Группы товаров</legend>
+            <ul>
+              <li><label>
+                <input type="radio" name="group" value="oils">
+                Бритвенные принадлежности
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="radio" name="group" value="care" checked>
+                  Средства для ухода
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="radio" name="group" value="accessories">Аксесуары
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <input type="submit" name="show" value="Показать">
+        </form>
+
+        <!-- Блок товаров -->
+
+        <div class="goods">
+          <div class="goods-item">
+            <a href="catalog-item.html" class="goods-image">
+              <img src="img/image-1.jpg" width="220" height="165" alt="Набор для путешествий
+              «Baxter of California»" >
+            </a>
+            <h2 class="goods-description">
+              <a href="catalog-item.html">
+                <span class="goods-category">
+                Набор для путешествий</span>
+                <span class="goods-brand">«Baxter of California»</span>
+              </a>
+            </h2>
+            <div class="goods-buy">
+              <span>2900 руб.</span>
+              <a href="#">Купить</a>
+            </div>
+          </div>
+
+          <div class="goods-item">
+            <a href="#" class="goods-image">
+              <img src="img/image-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер
+              «Baxter of California»">
+            </a>
+            <h2 class="goods-description">
+              <a href="#">
+                <span class="goods-category">Увлажняющий кондиционер</span>
+                <span class="goods-brand">«Baxter of California»</span>
+              </a>
+            </h2>
+            <div class="goods-buy">
+              <span>750 руб.</span>
+              <a href="#">Купить</a>
+            </div>
+          </div>
+
+          <div class="goods-item">
+            <a href="#" class="goods-image">
+              <img src="img/image-3.jpg" width="220" height="165" alt="Гель для волос
+              «SUAVECITO»">
+            </a>
+            <h2 class="goods-description">
+              <a href="#">
+                <span class="goods-category">Гель для волос</span>
+                <span class="goods-brand">«SUAVECITO»</span>
+              </a>
+            </h2>
+            <div class="goods-buy">
+              <span>290 руб.</span>
+              <a href="#">Купить</a>
+            </div>
+          </div>
+
+          <div class="goods-item">
+            <a href="#" class="goods-image">
+              <img src="img/image-4.jpg" width="220" height="165" alt="Глина для укладки волос
+              «American crew»">
+            </a>
+            <h2 class="goods-description">
+              <a href="#">
+                <span class="goods-category">Глина для укладки волос</span>
+                <span class="goods-brand">«American crew»</span>
+              </a>
+            </h2>
+            <div class="goods-buy">
+              <span>500 руб.</span>
+              <a href="#">Купить</a>
+            </div>
+          </div>
+
+          <div class="goods-item">
+            <a href="#" class="goods-image">
+              <img src="img/image-5.jpg" width="220" height="165" alt="Гель для волос
+              «AMERICAN CREW»">
+            </a>
+            <h2 class="goods-description">
+              <a href="#">
+                <span class="goods-category">Гель для волос</span>
+                <span class="goods-brand">«AMERICAN CREW»</span>
+              </a>
+            </h2>
+            <div class="goods-buy">
+              <span>300 руб.</span>
+              <a href="#">Купить</a>
+            </div>
+          </div>
+
+          <div class="goods-item">
+            <a href="#" class="goods-image">
+              <img src="img/image-6.jpg" width="220" height="165" alt="Набор для бритья
+              «Baxter of California»">
+            </a>
+            <h2 class="goods-description">
+              <a href="#">
+                <span class="goods-category">Набор для бритья</span>
+                <span class="goods-brand">«Baxter of California»</span>
+              </a>
+            </h2>
+            <div class="goods-buy">
+              <span>3900 руб.</span>
+              <a href="#">Купить</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Переключатель страниц -->
+
+        <ul class="page-selector">
+          <li><a href="#">1</a></li>
+          <li><span>2</span></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
         </ul>
       </div>
-
-      <!-- Фильтры -->
-
-      <form class="filters">
-        <fieldset class="filters-firms">
-          <legend>Производители:</legend>
-          <ul>
-            <li>
-              <label>
-              <input type="checkbox" name="baxter-of-california" checked>
-              Baxter of California
-              </label>
-            </li>
-            <li>
-              <label>
-                <input type="checkbox" name="mr-natty">
-                Mr Natty
-              </label>
-            </li>
-            <li>
-              <label>
-                <input type="checkbox" name="suavecito" checked>
-                Suavecito
-              </label>
-            </li>
-            <li>
-              <label>
-                <input type="checkbox" name="malin-goetz">
-                Malin+Goetz
-              </label>
-            </li>
-            <li>
-              <label>
-                <input type="checkbox" name="murrays">
-                Murray's
-              </label>
-            </li>
-            <li>
-              <label>
-                <input type="checkbox" name="american-crew">
-                American crew
-              </label>
-            </li>
-          </ul>
-        </fieldset>
-
-        <fieldset class="filters-group">
-          <legend>Группы товаров</legend>
-          <ul>
-            <li><label>
-              <input type="radio" name="group" value="oils">
-              Бритвенные принадлежности
-              </label>
-            </li>
-            <li>
-              <label>
-                <input type="radio" name="group" value="care" checked>
-                Средства для ухода
-              </label>
-            </li>
-            <li>
-              <label>
-                <input type="radio" name="group" value="accessories">Аксесуары
-              </label>
-            </li>
-          </ul>
-        </fieldset>
-        <input type="submit" name="show" value="Показать">
-      </form>
-
-      <!-- Блок товаров -->
-
-      <div class="goods">
-        <div class="goods-item">
-          <a href="catalog-item.html" class="goods-image">
-            <img src="img/image-1.jpg" width="220" height="165" alt="Набор для путешествий
-            «Baxter of California»" >
-          </a>
-          <h2 class="goods-description">
-            <a href="catalog-item.html">
-              <span class="goods-category">
-              Набор для путешествий</span>
-              <span class="goods-brand">«Baxter of California»</span>
-            </a>
-          </h2>
-          <div class="goods-buy">
-            <span>2900 руб.</span>
-            <a href="#">Купить</a>
-          </div>
-        </div>
-
-        <div class="goods-item">
-          <a href="#" class="goods-image">
-            <img src="img/image-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер
-            «Baxter of California»">
-          </a>
-          <h2 class="goods-description">
-            <a href="#">
-              <span class="goods-category">Увлажняющий кондиционер</span>
-              <span class="goods-brand">«Baxter of California»</span>
-            </a>
-          </h2>
-          <div class="goods-buy">
-            <span>750 руб.</span>
-            <a href="#">Купить</a>
-          </div>
-        </div>
-
-        <div class="goods-item">
-          <a href="#" class="goods-image">
-            <img src="img/image-3.jpg" width="220" height="165" alt="Гель для волос
-            «SUAVECITO»">
-          </a>
-          <h2 class="goods-description">
-            <a href="#">
-              <span class="goods-category">Гель для волос</span>
-              <span class="goods-brand">«SUAVECITO»</span>
-            </a>
-          </h2>
-          <div class="goods-buy">
-            <span>290 руб.</span>
-            <a href="#">Купить</a>
-          </div>
-        </div>
-
-        <div class="goods-item">
-          <a href="#" class="goods-image">
-            <img src="img/image-4.jpg" width="220" height="165" alt="Глина для укладки волос
-            «American crew»">
-          </a>
-          <h2 class="goods-description">
-            <a href="#">
-              <span class="goods-category">Глина для укладки волос</span>
-              <span class="goods-brand">«American crew»</span>
-            </a>
-          </h2>
-          <div class="goods-buy">
-            <span>500 руб.</span>
-            <a href="#">Купить</a>
-          </div>
-        </div>
-
-        <div class="goods-item">
-          <a href="#" class="goods-image">
-            <img src="img/image-5.jpg" width="220" height="165" alt="Гель для волос
-            «AMERICAN CREW»">
-          </a>
-          <h2 class="goods-description">
-            <a href="#">
-              <span class="goods-category">Гель для волос</span>
-              <span class="goods-brand">«AMERICAN CREW»</span>
-            </a>
-          </h2>
-          <div class="goods-buy">
-            <span>300 руб.</span>
-            <a href="#">Купить</a>
-          </div>
-        </div>
-
-        <div class="goods-item">
-          <a href="#" class="goods-image">
-            <img src="img/image-6.jpg" width="220" height="165" alt="Набор для бритья
-            «Baxter of California»">
-          </a>
-          <h2 class="goods-description">
-            <a href="#">
-              <span class="goods-category">Набор для бритья</span>
-              <span class="goods-brand">«Baxter of California»</span>
-            </a>
-          </h2>
-          <div class="goods-buy">
-            <span>3900 руб.</span>
-            <a href="#">Купить</a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Переключатель страниц -->
-
-      <ul class="page-selector">
-        <li><a href="#">1</a></li>
-        <li><span>2</span></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-      </ul>
    </main>
 
     <!-- Подвал -->
 
     <footer class="inner-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
